--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,6 @@
  align-items: center;
   height: 36px;
   width: 36px;
-  /* background-color: #8F90A6 */
   border-width: 1px;
   border-color: #E4E4EB;
   border-radius: 6px;
@@ -41,6 +40,17 @@
   color: white;
 }
 
+
+.active{
+  height: 36px;
+  width: 36px;
+  border-width: 2px;
+  border-color: orangered;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* html,
 
 body{
